[package]
name = "notification-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
chrono = "0.4.38"
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
