[package]
name = "notification-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
envy = "0.4.2"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
