[package]
name = "notification-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = "9.3.0"
proptest = { version = "1.5.0", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
rsa = { version = "0.9.6", features = ["pem"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
urlencoding = "2.1.3"
